[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["washingtonnuness <washingtonnuness@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.28"
taskipy = "^1.13.0"
mkdocs-glightbox = "^0.4.0"
mkdocs-video = "^1.5.0"
mkdocs-git-authors-plugin = "^0.9.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.6"
pillow = "^10.4.0"
cairosvg = "^2.7.1"
mkdocs-with-pdf = "^0.9.3"
mkdocs-exclude = "^1.0.2"
mkdocs-exclude-unused-files = "^1.4.0"
mkdocs-macros-plugin = "^1.0.5"
invoke = "^2.2.0"
rich = "^13.7.1"
typos = "^1.22.9"
fastapi = "^0.111.0"
ruff = "^0.5.0"
mkdocs-quiz = "^0.0.41"

[tool.poetry.group.snippets.dependencies]
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.5.1"
httpx = "^0.27.0"

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E402', 'F811']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'